@startuml
!theme amiga

[*] -down-> Begin
state Begin #Gray
state Focused #red {
}

state Finished #Gray : counter++
state Interrupted #ForestGreen
state Relaxed #Green : Short break
state Refreshed #Gray
state Stopped #DarkGreen : Long break
state Abandoned #Gray
state End #Gray

Begin -down-> Focused : Focus
Focused -right-> Interrupted : Interrupt
Focused -down-> Finished : Timeout
Focused -down-> Abandoned : Abandon

Finished -right-> Relaxed : [counter < 3]\rContinue
Finished -left-> Stopped : [counter >= 3]\rContinue
Finished --> Abandoned : Abandon

Interrupted --> Focused : Resume

Relaxed -right-> Refreshed : Timeout
Relaxed --> Abandoned : Abandon
Refreshed -down-> Abandoned : Abandon
Refreshed -up-> Focused : Continue

Stopped -down-> Abandoned : Abandon
Stopped -up-> End : Timeout

End -up-> Begin : Reset
Abandoned -up-> Begin : Reset
@enduml